add new map to index.html

--- a/index.html
+++ b/index.html
@@ -357,11 +357,7 @@
           <label for=""></label>  
           </form>
           </div>
-        <iframe
-          class="contact-section__map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640531314047!2d30.491233500000003!3d50.4566697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1705669920508!5m2!1suk!2sua"
-          width="603" height="595" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2542.866260145853!2d30.50215950000001!3d50.406330000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf2dbca441ff%3A0x2444f8e979ba8152!2z0L_RgNC-0YHQv9C10LrRgiDQktCw0LvQtdGA0ZbRjyDQm9C-0LHQsNC90L7QstGB0YzQutC-0LPQviwgMTI2LCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1710427907288!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
@@ -388,7 +384,7 @@
             <ul class="footer__address-list">
               <li><a class="footer__address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
               <li><a class="footer__address-link" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-              <li><a class="footer__address-link" href="https://maps.app.goo.gl/SvD66bGZupn16T4t5" target="_blank">Україна, м. Київ,
+              <li><a class="footer__address-link" href="https://maps.app.goo.gl/Rq1a8uEcZALW1TyF7" target="_blank">Україна, м. Київ,
                   вул. Січових Стрільців
                   54</a></li>
             </ul>
