--- a/index.html
+++ b/index.html
@@ -355,7 +355,10 @@
           </form>
           </div>
         <iframe  class="contact-section__map"
-         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2542.866260145853!2d30.50215950000001!3d50.406330000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf2dbca441ff%3A0x2444f8e979ba8152!2z0L_RgNC-0YHQv9C10LrRgiDQktCw0LvQtdGA0ZbRjyDQm9C-0LHQsNC90L7QstGB0YzQutC-0LPQviwgMTI2LCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1710427907288!5m2!1suk!2sua" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2542.866260145853!2d30.50215950000001!3d50.406330000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf2dbca441ff%3A0x2444f8e979ba8152!2z0L_RgNC-0YHQv9C10LrRgiDQktCw0LvQtdGA0ZbRjyDQm9C-0LHQsNC90L7QstGB0YzQutC-0LPQviwgMTI2LCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1710427907288!5m2!1suk!2sua" 
+         allowfullscreen="" 
+         loading="lazy" 
+         referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
